[gd_scene load_steps=8 format=3 uid="uid://c25sttp3j4nqv"]

[ext_resource type="Script" uid="uid://pvt1skwcqx4y" path="res://Scenes/SellPortal/SellPortal.gd" id="1_pfe3o"]
[ext_resource type="Material" uid="uid://bb8m5fhpi4wqn" path="res://assets/shaders/2d_outline_shader.tres" id="1_spe07"]
[ext_resource type="Texture2D" uid="uid://b1ro1ssup7dcp" path="res://assets/sprites/tiles.png" id="2_o13qi"]
[ext_resource type="Script" uid="uid://blquih6dsyq4c" path="res://Components/OutlineHighlighter.gd" id="3_pfe3o"]
[ext_resource type="Texture2D" uid="uid://c4awhqfup7o2k" path="res://assets/sprites/gold.png" id="4_o13qi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xasou"]
size = Vector2(32, 32)

[sub_resource type="LabelSettings" id="LabelSettings_spe07"]
shadow_size = 2
shadow_color = Color(0, 0, 0, 0.39607844)

[node name="SellPortal" type="Area2D"]
script = ExtResource("1_pfe3o")

[node name="Visuals" type="CanvasGroup" parent="."]
material = ExtResource("1_spe07")

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
position = Vector2(16, 16)
texture = ExtResource("2_o13qi")
region_enabled = true
region_rect = Rect2(224, 512, 32, 32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(16, 16)
shape = SubResource("RectangleShape2D_xasou")

[node name="OutlineHighlighter" type="Node" parent="." node_paths=PackedStringArray("visuals")]
script = ExtResource("3_pfe3o")
visuals = NodePath("../Visuals")
outline_color = Color(0, 0.75631833, 0.1975348, 1)
outline_thickness = 2

[node name="Label" type="Label" parent="."]
offset_top = 36.0
offset_right = 32.0
offset_bottom = 54.0
text = "sell"
label_settings = SubResource("LabelSettings_spe07")
horizontal_alignment = 1

[node name="Gold" type="HBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 51.0
offset_right = 28.0
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="GoldLabel" type="Label" parent="Gold"]
layout_mode = 2
text = "99"
label_settings = SubResource("LabelSettings_spe07")
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Gold"]
custom_minimum_size = Vector2(9, 0)
layout_mode = 2
texture = ExtResource("4_o13qi")
expand_mode = 1
stretch_mode = 5

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
